@@ -135,8 +135,4 @@
 
 - make a uint128_t version of montmath.  Needs to handle 64-bit.
 
-- XS.xs:  split the is_prime etc. into two.
-  1) single arg, neg input = 0.  Almost everything in case statement.
-  2) multi-arg.  others.
-
 - split out t/19-moebius
